travis : email off, irc on

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: ruby
 bundler_args: --without development
 script: "bundle exec rake spec"
+notifications:
+  email: false
+notifications:
+  irc: "irc.freenode.org#arbousier"
 rvm:
   - 1.9.3
   - rbx-19mode
